syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "PlayerHomeCompInfo.proto";

// CmdId: 4563
// EnetChannelId: 0
// EnetIsReliable: true
message PlayerHomeCompInfoNotify {
	PlayerHomeCompInfo comp_info = 2;
}
